--- a/_posts/2021-05-28-dataviz-1/dataviz-1.Rmd
+++ b/_posts/2021-05-28-dataviz-1/dataviz-1.Rmd
@@ -86,4 +86,7 @@ The dashboard can be viewed [here](https://public.tableau.com/views/Final__Data_
 
 - In Q4 2020, Singapore was importing approximately the same value in merchandise from Taiwan and US.
 
+adding 
+
+
 
